--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <script src="../dist/phaser-arcade-physics.min.js"></script>
         <!-- <script src="https://cdn.jsdelivr.net/npm/phaser@3.21.0/dist/phaser-arcade-physics.min.js"></script> -->
         <link rel="shortcut icon" href="" />
     </head>
