--- a/index.html
+++ b/index.html
@@ -14,12 +14,35 @@
 
             // global game options
             let gameOptions = {
-                platformStartSpeed: 250,
-                spawnRange: [100, 350],
-                platformSizeRange: [50, 250],
+                // platform speed range, in pixels per second
+                platformSpeedRange: [300, 400],
+
+                // spawn range, how far should be the rightmost platform from the right edge
+                // before next platform spawns, in pixels
+                spawnRange: [80, 300],
+
+                // platform width range, in pixels
+                platformSizeRange: [90, 300],
+
+                // a height range between rightmost platform and next platform to be spawned
+                platformHeightRange: [-10, 10],
+
+                // a scale to be multiplied by platformHeightRange
+                platformHeighScale: 10,
+
+                // platform max and min height, as screen height ratio
+                platformVerticalLimit: [0.4, 0.8],
+
+                // player gravity
                 playerGravity: 900,
+
+                // player jump force
                 jumpForce: 400,
+
+                // player starting X position
                 playerStartPosition: 100,
+
+                // consecutive jumps allowed
                 jumps: 2
             };
 
@@ -28,9 +51,9 @@
                 let gameConfig = {
                     type: Phaser.AUTO,
                     width: 1334,
-                    height: 900,
+                    height: 750,
                     scene: playGame,
-                    backgroundColor: 0x444444,
+                    backgroundColor: 0x87ceeb,
 
                     // physics settings
                     physics: {
@@ -49,9 +72,21 @@
                     super("PlayGame");
                 }
                 preload() {
-                    this.load.image("platform", "./images/yamero.jpg");
-                    this.load.image("player", "./images/player.png");
+                    this.load.image("platform", "./public/assets/yamero.jpg");
+                    this.load.image("player", "./public/assets/player.png");
+
+                    // dont forget to set the animation when enabling this
+                    // player is a sprite sheet made by 24x48 pixels
+                    // this.load.spritesheet(
+                    //     "player",
+                    //     "./public/assets/player.png",
+                    //     {
+                    //         frameWidth: 24,
+                    //         frameHeight: 48
+                    //     }
+                    // );
                 }
+
                 create() {
                     // group with all active platforms.
                     this.platformGroup = this.add.group({
@@ -72,26 +107,53 @@
                     // number of consecutive jumps made by the player
                     this.playerJumps = 0;
 
-                    // adding a platform to the game, the arguments are platform width and x position
-                    this.addPlatform(game.config.width, game.config.width / 2);
+                    // adding a platform to the game, the arguments are platform width, x position and y position
+                    this.addPlatform(
+                        game.config.width,
+                        game.config.width / 2,
+                        game.config.height *
+                            gameOptions.platformVerticalLimit[1]
+                    );
 
                     // adding the player;
                     this.player = this.physics.add.sprite(
                         gameOptions.playerStartPosition,
-                        game.config.height / 2,
+                        game.config.height * 0.1,
                         "player"
                     );
                     this.player.setGravityY(gameOptions.playerGravity);
 
+                    // setting player animation
+                    // this.anims.create({
+                    //     key: "run",
+                    //     frames: this.anims.generateFrameNumbers("player", {
+                    //         start: 0,
+                    //         end: 1
+                    //     }),
+                    //     frameRate: 8,
+                    //     repeat: -1
+                    // });
+
                     // setting collisions between the player and the platform group
-                    this.physics.add.collider(this.player, this.platformGroup);
+                    this.physics.add.collider(
+                        this.player,
+                        this.platformGroup,
+                        function() {
+                            // play "run" animation if the player is on a platform
+                            if (!this.player.anims.isPlaying) {
+                                this.player.anims.play("run");
+                            }
+                        },
+                        null,
+                        this
+                    );
 
                     // checking for input
                     this.input.on("pointerdown", this.jump, this);
                 }
 
                 // the core of the script: platform are added from the pool or created on the fly
-                addPlatform(platformWidth, posX) {
+                addPlatform(platformWidth, posX, posY) {
                     let platform;
                     if (this.platformPool.getLength()) {
                         platform = this.platformPool.getFirst();
@@ -102,12 +164,15 @@
                     } else {
                         platform = this.physics.add.sprite(
                             posX,
-                            game.config.height * 0.8,
+                            posY,
                             "platform"
                         );
                         platform.setImmovable(true);
                         platform.setVelocityX(
-                            gameOptions.platformStartSpeed * -1
+                            Phaser.Math.Between(
+                                gameOptions.platformSpeedRange[0],
+                                gameOptions.platformSpeedRange[1]
+                            ) * -1
                         );
                         this.platformGroup.add(platform);
                     }
@@ -130,6 +195,9 @@
                         }
                         this.player.setVelocityY(gameOptions.jumpForce * -1);
                         this.playerJumps++;
+
+                        // stops animation
+                        this.player.anims.stop();
                     }
                 }
                 update() {
@@ -141,6 +209,7 @@
 
                     // recycling platforms
                     let minDistance = game.config.width;
+                    let rightmostPlatformHeight = 0;
                     this.platformGroup
                         .getChildren()
                         .forEach(function(platform) {
@@ -148,10 +217,10 @@
                                 game.config.width -
                                 platform.x -
                                 platform.displayWidth / 2;
-                            minDistance = Math.min(
-                                minDistance,
-                                platformDistance
-                            );
+                            if (platformDistance < minDistance) {
+                                minDistance = platformDistance;
+                                rightmostPlatformHeight = platform.y;
+                            }
                             if (platform.x < -platform.displayWidth / 2) {
                                 this.platformGroup.killAndHide(platform);
                                 this.platformGroup.remove(platform);
@@ -160,13 +229,34 @@
 
                     // adding new platforms
                     if (minDistance > this.nextPlatformDistance) {
-                        var nextPlatformWidth = Phaser.Math.Between(
+                        let nextPlatformWidth = Phaser.Math.Between(
                             gameOptions.platformSizeRange[0],
                             gameOptions.platformSizeRange[1]
                         );
+                        let platformRandomHeight =
+                            gameOptions.platformHeighScale *
+                            Phaser.Math.Between(
+                                gameOptions.platformHeightRange[0],
+                                gameOptions.platformHeightRange[1]
+                            );
+                        console.log(rightmostPlatformHeight);
+                        let nextPlatformGap =
+                            rightmostPlatformHeight + platformRandomHeight;
+                        let minPlatformHeight =
+                            game.config.height *
+                            gameOptions.platformVerticalLimit[0];
+                        let maxPlatformHeight =
+                            game.config.height *
+                            gameOptions.platformVerticalLimit[1];
+                        let nextPlatformHeight = Phaser.Math.Clamp(
+                            nextPlatformGap,
+                            minPlatformHeight,
+                            maxPlatformHeight
+                        );
                         this.addPlatform(
                             nextPlatformWidth,
-                            game.config.width + nextPlatformWidth / 2
+                            game.config.width + nextPlatformWidth / 2,
+                            nextPlatformHeight
                         );
                     }
                 }
