added some random lines

--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
         <script src="//cdn.jsdelivr.net/npm/phaser@3.6.0/dist/phaser.min.js"></script>
         <!-- <script src="./dist/phaser.min.js"></script> -->
         <script src="./game.js"></script>
+        <script src="./textPicker.js"></script>
     </body>
 </html>
