--- a/index.html
+++ b/index.html
@@ -3,11 +3,15 @@
     <head>
         <link rel="shortcut icon" href="" />
         <meta charset="utf-8" />
-    </head>
-    <body>
+        <!-- <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script> -->
         <script src="//cdn.jsdelivr.net/npm/phaser@3.6.0/dist/phaser.min.js"></script>
+
         <!-- <script src="./dist/phaser.min.js"></script> -->
+        <!-- <script src="./myPlugins/lodash.min.js"></script> -->
+
         <script src="./game.js"></script>
-        <script src="./textPicker.js"></script>
-    </body>
+
+        <script src="./myPlugins/textPicker.js"></script>
+    </head>
+    <body></body>
 </html>
